# narrniche

./: .gitattributes  .gitignore  README.md  pyproject.toml  requirements.txt
data/processed/: colex.pkl  corpus.pkl  corpus_else.pkl  corpus_narr.pkl  data.csv  dirtes.json  fields.pkl  languages.json  lexicon.json  lgclx.pkl  merged_tes.pkl  saturation.csv  synlex.csv  tes.pkl
data/raw/: doreco_corpus.p  doreco_files_metadata.csv  doreco_languages_metadata.csv  word_counts.csv
data/raw/tes/: tes_anal1239.csv.p  tes_apah1238.csv.p  tes_arap1274.csv.p  tes_bain1259.csv.p  tes_beja1238.csv.p  tes_bora1263.csv.p  tes_cabe1245.csv.p  tes_cash1254.csv.p  tes_dolg1241.csv.p  tes_even1259.csv.p  tes_goem1240.csv.p  tes_goro1270.csv.p  tes_hoch1243.csv.p  tes_jeha1242.csv.p  tes_jeju1234.csv.p  tes_kaka1265.csv.p  tes_kama1351.csv.p  tes_kark1256.csv.p  tes_komn1238.csv.p  tes_lowe1385.csv.p  tes_movi1243.csv.p  tes_ngal1292.csv.p  tes_nisv1234.csv.p  tes_nngg1234.csv.p  tes_nort2641.csv.p  tes_nort2875.csv.p  tes_orko1234.csv.p  tes_pnar1238.csv.p  tes_port1286.csv.p  tes_resi1247.csv.p  tes_ruul1235.csv.p  tes_sadu1234.csv.p  tes_sanz1248.csv.p  tes_savo1255.csv.p  tes_sout2856.csv.p  tes_sout3282.csv.p  tes_sumi1235.csv.p  tes_svan1243.csv.p  tes_taba1259.csv.p  tes_teop1238.csv.p  (+8 more)
notebooks/: 00_preprocessing.ipynb  01_colexification.ipynb  02_field_detection.ipynb  03_data_production.ipynb  04_analysis.Rmd
