[project]
name = "narrniche"
version = "0.1.0"
description = "source code of the narrniche research project"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "dill>=0.4.0",
    "editdistance>=0.8.1",
    "gensim>=4.4.0",
    "hunspell>=0.5.5",
    "matplotlib>=3.10.7",
    "networkx>=3.5",
    "numpy>=2.3.3",
    "pandas>=2.3.2",
    "pip>=25.3",
    "scikit-learn>=1.8.0",
    "scipy>=1.16.3",
    "seaborn>=0.13.2",
    "spacy>=3.8.11"
]
